# fraud-detection-class

./: .env copy.example  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  slides.html
.agents/skills/share/: SKILL.md
.claude/commands/: share.md
config/: settings.py  urls.py
creditapp/: admin.py  models.py  urls.py  views.py
creditapp/management/commands/: run_fraud_pipeline.py
creditapp/templates/creditapp/: apply.html  base.html  index.html  status.html  transactions.html
dashboard/: app.py
mcp_server/: main.py  server.py
notebooks/: fraud_analysis.ipynb
report/: README.md  phase_10_epic.md  phase_1_fraud_rules.md  phase_2_tests.md  phase_3_entry_point.md  phase_4_logging.md  phase_5_api_admin.md  phase_6_cli.md  phase_7_etl.md  phase_8_dashboard.md  phase_9_mcp.md
scripts/: cli.py  etl.py  pipeline.py  transactions.py
src/: cli.py
src/etl/: __init__.py  ingest.py  pipeline.py  publish.py  run.py  stage.py
src/fraud/: __init__.py  constants.py  geo_anomaly.py  high_risk_merchant.py  income_ratio.py  rules.py  unusual_hours.py  velocity_check.py
src/rules/: __init__.py  geo.py  high_risk.py  income.py  unusual_hours.py  velocity.py
tests/: conftest.py  test_etl.py  test_geo.py  test_high_risk.py  test_income.py  test_rules.py  test_run_all.py  test_unusual_hours.py  test_velocity.py
